css/styles.css
@font-face {
    font-family: 'sharpBook20';
    src: url(../fonts/SharpGroteskBook20.woff);
    mso-font-alt: 'Arial';
}

@font-face {
    font-family: 'sharpBook25';
    src: url(../fonts/SharpGroteskBook25.woff);
    mso-font-alt: 'Arial';
}

@font-face {
    font-family: 'sharpLight25', 'Arial';
    src: url(../fonts/SharpGroteskLight25.woff);
}

@font-face {
    font-family: 'cooper';
    src: url(../fonts/cooperl.woff);
    mso-font-alt: 'Georgia';
}

@font-face {
    font-family: 'sharpBold20';
    src: url(../fonts/SharpGroteskSmBold20.woff);
}

@font-face {
    font-family: 'sharpBold25';
    src: url(../fonts/SharpGroteskSmBold25.woff);
}

@font-face {
    font-family: "Sharp Grotesk Book";
    src: local("Sharp Grotesk Book"), local("SharpGroteskBook"), url("../fonts/SharpGroteskBook.woff2") format("woff2"), url("../fonts/SharpGroteskBook.woff") format("woff"), url("../fonts/SharpGroteskBook.otf") format("opentype"), url("../fonts/SharpGroteskBook.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Sharp Grotesk Medium";
    src: local("Sharp Grotesk Medium"), local("SharpGroteskMedium"), url("../fonts/SharpGroteskMedium.woff2") format("woff2"), url("../fonts/SharpGroteskMedium.woff") format("woff"), url("../fonts/SharpGroteskMedium.otf") format("opentype"), url("../fonts/SharpGroteskMedium.ttf") format("truetype");
    font-weight: 500;
    font-style: normal;
}


/* BEGIN: TYPEFACE */

.sharpLight25 {
    font-family: 'sharpLight25';
}

.sharpBook25 {
    font-family: 'sharpBook25';
}

.sharpBook20 {
    font-family: 'sharpBook20';
}

.sharpBold25 {
    font-family: 'sharpBold25';
}


/* END: TYPEFACE */

.img-product {
    width: 100%;
    display: block;
    margin: auto;
}

.product-link {
    padding: 10% 8%;
    text-align: center;
    border-radius: 20px;
    margin: 20px 0;
}

.product-link:hover {
    box-shadow: 2px 2px 12px rgba(0, 0, 0, .15);
}

.product-price {
    font-family: 'sharpBook25';
}

.zip-price {
    font-family: 'sharpBook20';
    color: #1a0826 !important;
}

.zip-price span {
    font-family: 'sharpBold20';
    color: #8364bf;
}

@media screen and (max-width:768px) {
    .zip-price {
        font-size: 14px;
    }
}

body {
    margin: 0;
    font-family: 'sharpBook20', sans-serif;
    color: #1A0826;
    background-color: #fffffa;
    overflow-x: initial;
}

body.boxed {
    max-width: 1200px;
    display: block;
    margin: auto;
}

a,
a:hover,
a:visited {
    text-decoration: none;
    color: #fffffa;
}

small {
    font-size: 12px;
    color: #8364bf;
}

.bg-fearless {
    background-color: #c9b3ff;
    width: 100% !important;
}

.button {
    background-color: #411361;
    padding: 2% 8%;
    color: #fffffa;
    border-radius: 8px;
    font-weight: bolder;
    margin: 15% 0;
}

.button:hover {
    background-color: #53187c;
}

.button.product {
    font-size: 12px;
}

.img-100 {
    width: 100%;
}

.header {
    padding: 4%;
}

@media screen and (min-width:768px) {
    .overflow-carousel {
        overflow-x: hidden !important;
    }
}

@media screen and (max-width:768px) {
    .overflow-carousel {
        overflow-x: auto !important;
    }
}

.description {
    text-align: center;
    padding: 3% 5%;
    background-color: #EDE6FF;
    line-height: 1.75rem;
}

.bg-text {
    display: inline-block;
    background-color: #AA8FFF;
    padding: 0.3% 0.5%;
    font-family: 'sharpBold25';
    transform: skew(7deg);
}

.bg-text span {
    transform: skew(0deg) !important;
}

.conoce-mas .row {
    align-items: flex-start;
    justify-content: space-around;
}

.cardSteps {
    background-color: #e5e4e2;
    padding: 5%;
    box-sizing: border-box;
    border-radius: 4px;
    text-align: center;
    min-height: 380px;
    width: calc(100% - 150px);
    display: block;
    margin: 7% auto;
    position: relative;
}

.producto-promocion .product-link {
    text-align: center;
}

.producto-promocion .product-link:hover {
    box-shadow: none;
}

.producto-promocion .product-link img {
    width: 200px;
}

@media screen and (max-width:768px) {
    .cardSteps {
        width: 100%;
        margin: 15% auto;
    }
    .conoce-mas .container .row .col-12:first-child {
        margin-top: 20%;
    }
}

.cardSteps .icon {
    max-width: 100px;
    position: absolute;
    top: calc(-15%);
    left: calc(50% - 50px);
    background-color: #fffffa;
    border-radius: 50%;
}

.sin-intereses {
    padding: 3% 7%;
}

.requisitos {
    text-align: center;
    margin-top: 7%;
    padding: 0 10%;
}

.requisitos ul li {
    list-style: none;
    text-align: left;
    line-height: 3rem;
}

.requisitos ul {
    list-style-type: none;
    padding-inline-start: 0;
}

.requisitos ul li:before {
    background-image: url('../img/requisitos.svg');
    content: '';
    display: inline-block;
    height: 36px;
    width: 36px;
    position: relative;
    top: 12px;
}

@media screen and (max-width:768px) {
    .requisitos {
        padding: 0 5%;
    }
    .requisitos ul li:before {
        height: 24px;
        width: 24px;
        position: relative;
        top: 6px;
    }
}

.faqs {
    text-align: center;
}

.faqs .col-lg-6 {
    display: block;
    margin: auto;
    background-image: url(../img/lines-faq.svg);
    background-repeat: repeat-y;
    background-position: center;
}

.optionFaq {
    margin-bottom: 12%;
    background-color: #fffffa;
    padding: 2%;
}

.destacado {
    background-color: #EDE6FF;
    padding: 2% 5%;
    font-weight: bolder;
}

footer {
    margin-bottom: 5%;
}


/* ----------FONTS--------- */

.text-center {
    text-align: center;
}

.pLarge {
    font-size: 18px;
}

.pMed {
    font-size: 16px;
}

.pSmall {
    font-size: 14px;
}

.text-footer {
    text-align: right;
}

@media screen and (max-width:768px) {
    .text-footer {
        text-align: center;
    }
}


/* LANDING ZIP STYLES */

@media only screen and (min-width: 768px) {
    .zip-landing-page h2 {
        font-size: 26px;
        line-height: 30px;
        margin-bottom: 16px;
    }
    .zip-landing-page h3 {
        font-size: 18px;
        line-height: 24px;
    }
    .zip-landing-page p {
        font-size: 18px;
        line-height: 24px;
        margin: 18px 0;
    }
    .zip-landing-page p.p-available-font {
        font-size: 24px;
        line-height: 30px;
    }
    .zip-landing-page img.banner_desktop {
        margin-bottom: 96px;
    }
    .zip-landing-page .how-zip-works .zip-flex-box {
        margin: 40px 0;
        display: flex;
        flex-direction: row;
    }
    .zip-landing-page .how-zip-works .zip-flex-box img {
        height: 80px;
        margin-right: 24px;
    }
    .zip-landing-page .how-zip-works .zip-flex-box>div {
        margin-right: 24px;
        flex: 1 1 0px;
    }
    .zip-landing-page .how-zip-works .zip-flex-box>div:last-child {
        margin-right: 0;
    }
    .zip-landing-page .eligibility .zip-flex-box {
        margin: 40px 0 0 0;
        display: flex;
    }
    .zip-landing-page .eligibility .zip-flex-box>div {
        margin-right: 24px;
        flex: 1 1 0px;
        padding: 32px;
    }
    .zip-landing-page .eligibility .zip-flex-box>div>img {
        height: 32px;
        width: 32px;
    }
    .zip-landing-page .eligibility .zip-flex-box>div:last-child {
        margin-right: 0;
    }
    .zip-landing-page section.customer-service {
        border-radius: 4px;
        padding: 40px;
    }
    .zip-landing-page section.customer-service h2 {
        font-size: 35px;
        line-height: 38px;
    }
}

@media only screen and (max-width: 768px) {
    .zip-landing-page h2 {
        font-size: 24px;
        line-height: calc((24px / 32px) * 50);
        margin-bottom: calc((24px / 32px) * 16);
    }
    .zip-landing-page h3 {
        font-size: 20px;
        line-height: 24px;
    }
    .zip-landing-page p {
        font-size: 15px;
        line-height: 22px;
        margin: 18px 0;
    }
    .zip-landing-page p.p-available-font {
        font-size: 20px;
        line-height: 26px;
    }
    .zip-landing-page img.banner_desktop {
        margin-bottom: 24px;
    }
    .zip-landing-page .how-zip-works .zip-flex-box {
        display: block;
    }
    .zip-landing-page .how-zip-works .zip-flex-box>div {
        margin-right: 0px;
    }
    .zip-landing-page .how-zip-works .zip-flex-box img {
        height: 60px;
        margin-right: 18px;
    }
    .zip-landing-page .eligibility .zip-flex-box {
        margin: 40px 0 0 0;
        display: block;
    }
    .zip-landing-page .eligibility .zip-flex-box>div {
        margin-right: 0px;
        margin-bottom: 24px;
        padding: 24px;
    }
    .zip-landing-page .eligibility .zip-flex-box>div>img {
        height: 32px;
        width: 32px;
    }
    .zip-landing-page section.customer-service {
        border-radius: 0px;
        padding: 30px;
    }
    .zip-landing-page section.customer-service h2 {
        font-size: 24px;
        line-height: 26px;
    }
}

@media only screen and (max-width: 576px) {
    .zip-landing-page img.banner_desktop {
        display: none;
    }
    .zip-landing-page img.banner_mobile {
        display: block;
    }
}

@media only screen and (min-width: 576px) {
    .zip-landing-page img.banner_desktop {
        display: block;
    }
    .zip-landing-page img.banner_mobile {
        display: none;
    }
}

